<resources>
    <string name="app_name">apPro</string>
    <string name="approList">Current and Upcoming Appros</string>
    <string name="createAppro">Create Appro</string>
    <string name="showBars">Show Bars For This Appro</string>
    <string name="joinAppro">Join This Appro!</string>
    <string name="title_activity_maps">Map</string>
    <string name="map">Map</string>
    <string name="scan">Scan</string>
    <string name="home">Home</string>
    <string name="appro">Appro</string>
    <string name="stamps">Stamps</string>
    <string name="fit_image_to_scan">Qrcode camera surfaceview</string>
    <string name="QR_search_text">Scan a QR-code</string>
    <string name="QR_code_found">Code Found</string>
    <string name="join">Join Appro</string>
    <string name="leave">Leave Appro</string>
    <string name="create">Create Appro</string>
    <string name="approLeaveWarn">Warning</string>
    <string name="approLeaveMessage">You are about to leave your current Appro! All progress will be lost. Are you sure?</string>
    <string name="approReplacementWarn">Warning</string>
    <string name="approReplacementMessage">You\'re about to join a new Appro! All progress from the old one will be lost. Are you sure?</string>
    <string name="cancel">Cancel</string>
    <string name="alreadyInAppro">Already in this Appro</string>
    <string name="noCurrAppro">You are not currently in any Appro</string>
    <string name="selectImage">Select Image</string>
    <string name="nameOfAppro">Name of the Appro</string>
    <string name="descForAppro">Description for Appro</string>
    <string name="accept">Accept</string>
    <string name="selectBars">Select Bars</string>
    <string name="price">Price €</string>
    <string name="location">Location</string>
    <string name="aboutToCreate">Are you sure you want to create Appro with bars:</string>
    <string name="time">Time(Format: 16:00)</string>
    <string name="approCreated">Appro Created!</string>
    <string name="approNotCreated">Appro with the given name already exists</string>
    <string name="totalBars">Total Bars:</string>
    <string name="noData">No Data</string>
    <string name="approImage">Appro Image</string>
    <string name="pickApproDate">Pick Appro Date</string>
    <string name="approImageHere">Appro Image goes here</string>
    <string name="splashScreen">Splash screen with app logo</string>
    <string name="approStamp">Stamp</string>
    <string name="alreadyHasStamp">You have already collected this stamp</string>
    <string name="stampAdded">Stamp added for:</string>
    <string name="aboutPage">Information about this page:</string>
    <string name="aboutMessage">In this page you are able to see your current progress. Visit bars, buy drinks, and collect stamps.</string>
    <string name="joinedAppro">Joined Appro!</string>

</resources>
